examples/errors/access_private_prop/main.lc

class Base {

    private ty: string

    static new(): Base {
        return Base {
            ty: "Base",
        };
    }

}

function main() {
    const base = Base.new();
		print(base.ty);
}
